create COMP and define its funciton

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,3 +33,7 @@ target_link_libraries(FIND util file)
 add_executable(FINDSTR ${SOURCE}/FINDSTR.c)
 set_target_properties(FINDSTR PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${EXE})
 target_link_libraries(FINDSTR util file)
+
+add_executable(COMP ${SOURCE}/COMP.c)
+set_target_properties(COMP PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${EXE})
+target_link_libraries(COMP util file)
