--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "time_types.h": "c",
         "stdlib.h": "c",
         "string.h": "c",
-        "dirent.h": "c"
+        "dirent.h": "c",
+        "file_util.h": "c"
     }
 }
